# whisper-rs-cli

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/audio/: converter.rs  formats.rs  loader.rs  mod.rs
src/cli/: mod.rs  transcribe.rs
src/model/: downloader.rs  loader.rs  mod.rs
src/output/: logger.rs  mod.rs
tests/: integration_test.rs
