[package]
name = "whisper-rs-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
clap-verbosity-flag = "2.2"
whisper-rs = "0.12"
hound = "3.5"
rubato = "0.15"
owo-colors = "4.1"
reqwest = { version = "0.12", features = ["blocking"] }
anyhow = "1.0"
thiserror = "2.0"
indicatif = "0.17"
tempfile = "3.13"
dirs = "5.0"

[dev-dependencies]
rstest = "0.22"
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1"
